Simplified Chinese tsl update.

--- a/debian/changelog
+++ b/debian/changelog
@@ -38,6 +38,7 @@ dpkg (1.13.20~) UNRELEASED; urgency=low
   * Romanian (Eddy Petrişor).
   * Russian (Yuri Kozlov). Closes: #366353
   * Czech (Miroslav Kure).
+  * Simplified Chinese (Kov Tchai). Closes: #366985
 
   [ Updated dselect Translations ]
   * Polish (Robert Luberda).
@@ -47,7 +48,7 @@ dpkg (1.13.20~) UNRELEASED; urgency=low
   [ Updated man pages translations ]
   * Polish (Robert Luberda).
 
- -- Christian Perrier <bubulle@debian.org>  Sat,  6 May 2006 07:36:34 +0200
+ -- Christian Perrier <bubulle@debian.org>  Sat, 13 May 2006 06:43:35 +0200
 
 dpkg (1.13.19) unstable; urgency=low
 
