--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-05-13  Kov Tchai  <tchaikov@sjtu.edu.cn>
+
+	* zh_CN.po: Updated to 738t4f.
+
 2006-05-08  Miroslav Kure  <kurem@debian.cz>
 
 	* cs.po: Updated to 742t.
