French translation updated

--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -1,3 +1,17 @@
+2006-05-14  Philippe Batailler <philippe.batailler@free.fr>
+
+	* fr/dpkg-name.1.fr.po: Updated translation.
+	* fr/install-info.8.fr.po: likewise.
+	* fr/dpkg-statoverride.8.fr.po: likewise.
+	* fr/deb-control.5.fr.po: likewise.
+	* fr/dpkg-scanpackages.1.fr.po: likewise.
+	* fr/dpkg-source.1.fr.po: likewise.
+	* fr/dpkg.1.fr.po: likewise.
+	* fr/dpkg-divert.8.fr.po: likewise.
+	* fr/dpkg-query.1.fr.po: likewise.
+	* fr/dpkg-checkbuilddeps.1.fr.po: likewise.
+	* fr/dpkg-deb.1.fr.po: likewise
+
 2006-05-11  Frank Lichtenheld  <djpig@debian.org>
 
 	* C/po/*.pot: Update.
