--- a/man/fr/dpkg-deb.1.fr.po
+++ b/man/fr/dpkg-deb.1.fr.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: dpkg svn 73\n"
 "POT-Creation-Date: 2006-05-11 23:08-0500\n"
-"PO-Revision-Date: 2006-03-04 12:01+0100\n"
+"PO-Revision-Date: 2006-05-14 11:38+0200\n"
 "Last-Translator: Philippe Batailler <philippe.batailler@free.fr>\n"
 "Language-Team: French <debian-l10n-french@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -21,9 +21,9 @@ msgstr "dpkg-deb"
 
 # type: TH
 #: dpkg-deb.1:1
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "2006-05-10"
-msgstr "28-02-2006"
+msgstr "10-05-2006"
 
 # type: TH
 #: dpkg-deb.1:1
@@ -250,14 +250,15 @@ msgstr "B<--show>, B<-W>"
 
 # type: Plain text
 #: dpkg-deb.1:132
-#, fuzzy
 msgid ""
 "Provides information about a binary package archive in the format specified "
 "by the B<--showformat> argument. The default format displays the package's "
 "name and version on one line, seperated by a tabulator."
 msgstr ""
 "Cette option donne des informations sur l'archive d'un paquet binaire selon "
-"le format spécifié par l'argument B< --showformat>."
+"le format spécifié par l'argument B< --showformat>. Le format par défaut "
+"affiche le nom et la version du paquet sur une seule ligne, séparés par un "
+"espace (tab)."
 
 # type: TP
 #: dpkg-deb.1:132
@@ -456,7 +457,7 @@ msgstr "AUTRES OPTIONS"
 #: dpkg-deb.1:211
 #, no-wrap
 msgid "B<--show-format=>I<format>"
-msgstr ""
+msgstr "B<--show-format=>I<format>"
 
 # type: Plain text
 #: dpkg-deb.1:216
@@ -464,10 +465,11 @@ msgid ""
 "This option is used to specify the format of the output B<--show> will "
 "produce. The format is a string that will be output for each package listed."
 msgstr ""
+"Cette option sert à indiquer le format utilisé par l'option B<--show>. C'est "
+"une chaîne qui est affichée pour chaque paquet listé."
 
 # type: Plain text
 #: dpkg-deb.1:225
-#, fuzzy
 msgid ""
 "The string may reference any status field using the \"${I<field-name>}\" "
 "form, a list of the valid fields can be easily produced using B<-I> on the "
@@ -477,7 +479,10 @@ msgid ""
 msgstr ""
 "Cet argument est une chaîne qui peut référencer tout champ avec la forme "
 "${I<field-name>}\\ ; une liste des champs valables peut être facilement "
-"produite avec l'option B<-I> sur le même paquet."
+"produite avec l'option B<-I> sur le même paquet. Une explication complète "
+"des options de formatage (avec les séquences d'échappement et les espaces "
+"entre les champs) se trouve dans la page B<dpkg-query>(1), option B<--"
+"showformat>."
 
 # type: Plain text
 #: dpkg-deb.1:227
