--- a/man/fr/dpkg-query.1.fr.po
+++ b/man/fr/dpkg-query.1.fr.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: dpkg man pages\n"
 "POT-Creation-Date: 2006-05-11 23:08-0500\n"
-"PO-Revision-Date: 2006-03-04 10:41+0100\n"
+"PO-Revision-Date: 2006-05-14 11:29+0200\n"
 "Last-Translator: Philippe Batailler <philippe.batailler@free.fr>\n"
 "Language-Team: French <debian-l10n-french@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -21,9 +21,9 @@ msgstr "dpkg-query"
 
 # type: TH
 #: dpkg-query.1:1
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "2006-04-09"
-msgstr "28-02-2006"
+msgstr "09-04-2006"
 
 # type: TH
 #: dpkg-query.1:1
@@ -134,11 +134,12 @@ msgid ""
 msgstr ""
 "Liste les paquets correspondants au motif donné. Quand on ne donne aucun "
 "I<nom-paquet-motif>, tous les paquets listés dans I</var/lib/dpkg/status> "
-"sont affichés. Les métacaractères ordinaires de l'interpréteur de commandes "
-"sont autorisés dans I<nom-paquet-motif>. Il faudra sans doute mettre I<nom-"
-"paquet-motif> entre apostrophes pour éviter l'expansion des noms de fichier "
-"par l'interpréteur de commandes. Par exemple, tous les paquets dont le nom "
-"commence par «\\ libc6\\ » seront affichés par la commande\\ :"
+"sont affichés, sauf ceux dont l'état est «\\ purge\\ ». Les métacaractères "
+"ordinaires de l'interpréteur de commandes sont autorisés dans I<nom-paquet-"
+"motif>. Il faudra sans doute mettre I<nom-paquet-motif> entre apostrophes "
+"pour éviter l'expansion des noms de fichier par l'interpréteur de commandes. "
+"Par exemple, tous les paquets dont le nom commence par «\\ libc6\\ » seront "
+"affichés par la commande\\ :"
 
 # type: Plain text
 #: dpkg-query.1:54
