--- a/man/fr/dpkg-source.1.fr.po
+++ b/man/fr/dpkg-source.1.fr.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: dpkg.1\n"
 "POT-Creation-Date: 2006-05-11 23:08-0500\n"
-"PO-Revision-Date: 2006-03-04 17:34+0100\n"
+"PO-Revision-Date: 2006-05-14 11:08+0200\n"
 "Last-Translator: Philippe Batailler <philippe.batailler@free.fr>\n"
 "Language-Team: French <debian-l10n-french@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -129,7 +129,6 @@ msgstr ""
 
 # type: Plain text
 #: dpkg-source.1:68
-#, fuzzy
 msgid ""
 "B<dpkg-shlibdeps> calculates shared library dependencies for executables "
 "named in its arguments. The dependencies are added to the substitution "
@@ -153,14 +152,16 @@ msgstr ""
 "shlibs.local>, B</etc/dpkg/shlibs.override>, le fichier B<shlibs>, (fichier "
 "du paquet contenant un fichier qui, selon B<objdump,> satisfait au système "
 "de dépendance envers les bibliothèques) ou bien B</etc/dpkg/shlibs.default>. "
-"Le premier trouvé est utilisé. Voyez B<dpkg-shlibdeps(1)> pour des "
+"Le premier trouvé est utilisé. Consultez la charte Debian pour des "
 "précisions sur le format des fichiers qui traitent des dépendances envers "
-"les bibliothèques partagées."
+"les bibliothèques partagées. Ce format est le suivant\\ :"
 
 # type: Plain text
 #: dpkg-source.1:70
 msgid "E<lt>library nameE<gt> E<lt>version/sonameE<gt> E<lt>dependenciesE<gt>"
 msgstr ""
+"E<lt>nom de la bibliothèqueE<gt> E<lt>version/nom_soE<gt> "
+"E<lt>dépendancesE<gt>"
 
 # type: Plain text
 #: dpkg-source.1:76
@@ -693,7 +694,6 @@ msgstr ""
 
 # type: Plain text
 #: dpkg-source.1:318
-#, fuzzy
 msgid ""
 "This is very helpful in cutting out extraneous files that get included in "
 "the .diff.gz, (eg: \"debian/BUGS_TODO/*\" or \"debian/RCS/*,v\"). For "
@@ -1443,7 +1443,6 @@ msgstr ""
 
 # type: Plain text
 #: dpkg-source.1:696
-#, fuzzy
 msgid ""
 "After all the substitutions have been done each occurrence of the string B<"
 "${}> (which is not a legal substitution) is replaced with a B<$> sign."
@@ -1487,33 +1486,31 @@ msgstr ""
 
 # type: TP
 #: dpkg-source.1:715
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "B<source:Version>"
-msgstr "B<Source-Version>"
+msgstr "B<Source:Version>"
 
 # type: Plain text
 #: dpkg-source.1:718
-#, fuzzy
 msgid "The source package version."
-msgstr "La version du paquet source (tirée du fichier changelog)."
+msgstr "La version du paquet source."
 
 # type: TP
 #: dpkg-source.1:718
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "B<source:Upstream-Version>"
-msgstr "B<dpkg:UpstreamVersion>"
+msgstr "B<source:Upstream-Version>"
 
 # type: Plain text
 #: dpkg-source.1:721
-#, fuzzy
 msgid "The upstream source package version."
-msgstr "The upstream version of dpkg."
+msgstr "La version amont du paquet source."
 
 # type: TP
 #: dpkg-source.1:721
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "B<binary:Version>"
-msgstr "B<dpkg:Version>"
+msgstr "B<binary:Version>"
 
 # type: Plain text
 #: dpkg-source.1:725
@@ -1521,6 +1518,8 @@ msgid ""
 "The binary package version (which may differ from source:Version in a binNMU "
 "for example)."
 msgstr ""
+"La version du paquet binaire (qui peut être différente de source:Version "
+"dans un binNMU par exemple)."
 
 # type: TP
 #: dpkg-source.1:725
@@ -1535,6 +1534,9 @@ msgid ""
 "B<deprecated> as its meaning is different from its function, please use the "
 "B<source:Version> or B<binary:Version> as appropriate."
 msgstr ""
+"La version du paquet source, selon le fichier changelog. Cette variable est "
+"maintenant B<déconseillée> car sa signification est distincte de sa "
+"fonction. Utilisez plutôt B<source:Version> ou B<binary:Version>."
 
 # type: TP
 #: dpkg-source.1:730
@@ -1638,14 +1640,14 @@ msgstr ""
 
 # type: TP
 #: dpkg-source.1:773
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "B<dpkg:Upstream-Version>"
-msgstr "B<dpkg:UpstreamVersion>"
+msgstr "B<dpkg:Upstream-Version>"
 
 # type: Plain text
 #: dpkg-source.1:776
 msgid "The upstream version of dpkg."
-msgstr "The upstream version of dpkg."
+msgstr "La version amont de dpkg."
 
 # type: TP
 #: dpkg-source.1:776
@@ -1656,7 +1658,7 @@ msgstr "B<dpkg:Version>"
 # type: Plain text
 #: dpkg-source.1:779
 msgid "The full version of dpkg."
-msgstr "The full version of dpkg."
+msgstr "La version complète de dpkg."
 
 # type: Plain text
 #: dpkg-source.1:782
