--- a/man/fr/dpkg.1.fr.po
+++ b/man/fr/dpkg.1.fr.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: dpkg man pages\n"
 "POT-Creation-Date: 2006-05-11 23:08-0500\n"
-"PO-Revision-Date: 2006-03-04 17:38+0100\n"
+"PO-Revision-Date: 2006-05-14 11:25+0200\n"
 "Last-Translator: Philippe Batailler <philippe.batailler@free.fr>\n"
 "Language-Team: French <debian-l10n-french@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -21,9 +21,9 @@ msgstr "dpkg"
 
 # type: TH
 #: dpkg.1:1
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "2006-04-09"
-msgstr "28-02-2006"
+msgstr "09-04-2006"
 
 # type: TH
 #: dpkg.1:1
@@ -605,13 +605,13 @@ msgstr "B<dpkg --get-selections> [I<paquet-nom-motif>...]"
 
 # type: Plain text
 #: dpkg.1:200
-#, fuzzy
 msgid ""
 "Get list of package selections, and write it to stdout. Without a pattern, "
 "packages marked with state purge will not be shown."
 msgstr ""
 "Obtient la liste des sélections des paquets, et l'envoie sur la sortie "
-"standard."
+"standard. Sans un motif, les paquets dont le statut est «\\ purge\\ » ne "
+"seront pas affichés."
 
 # type: TP
 #: dpkg.1:200
@@ -635,9 +635,9 @@ msgstr ""
 
 # type: TP
 #: dpkg.1:206
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "B<dpkg --clear-selections>"
-msgstr "B<dpkg --set-selections>"
+msgstr "B<dpkg --clear-selections>"
 
 # type: Plain text
 #: dpkg.1:211
@@ -646,6 +646,9 @@ msgid ""
 "is intended to be used immediately before --set-selections, to deinstall any "
 "packages not in list given to --set-selections."
 msgstr ""
+"Met l'état de chaque paquet non essentiel à «\\ deinstall\\ ». Il faut "
+"utiliser cette option juste avant --set-selections, pour désinstaller les "
+"paquets qui ne sont pas affichés par --set-selections."
 
 # type: TP
 #: dpkg.1:211
@@ -1626,9 +1629,9 @@ msgstr "Pour afficher les paquets dont le nom contient la chaîne 'vi' :"
 
 # type: Plain text
 #: dpkg.1:559
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "     B<dpkg -l \\(aq*vi*\\(aq>\n"
-msgstr "B< dpkg -l \\(aq*vi*\\(aq>"
+msgstr "    B<dpkg -l \\(aq*vi*\\(aq>\n"
 
 # type: Plain text
 #: dpkg.1:562
@@ -1639,9 +1642,9 @@ msgstr ""
 
 # type: Plain text
 #: dpkg.1:564
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "     B<dpkg --print-avail elvis vim | less>\n"
-msgstr "B<dpkg --print-avail elvis vim | less>"
+msgstr "    B<dpkg --print-avail elvis vim | less>\n"
 
 # type: Plain text
 #: dpkg.1:567
@@ -1650,9 +1653,9 @@ msgstr "Pour rechercher vous-même dans la liste des paquets\\ :"
 
 # type: Plain text
 #: dpkg.1:569
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "     B<less /var/lib/dpkg/available>\n"
-msgstr "B<less /var/lib/dpkg/available>"
+msgstr "    B<less /var/lib/dpkg/available>\n"
 
 # type: Plain text
 #: dpkg.1:572
@@ -1661,9 +1664,9 @@ msgstr "Pour supprimer le paquet installé elvis\\ :"
 
 # type: Plain text
 #: dpkg.1:574
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "     B<dpkg -r elvis>\n"
-msgstr "B<dpkg -r elvis>"
+msgstr "    B<dpkg -r elvis>\n"
 
 # type: Plain text
 #: dpkg.1:579
@@ -1677,11 +1680,13 @@ msgstr ""
 
 # type: Plain text
 #: dpkg.1:582
-#, fuzzy, no-wrap
+#, no-wrap
 msgid ""
 "     B<cd /cdrom/hamm/hamm/binary/editors>\n"
 "     B<dpkg -i vim_4.5-3.deb>\n"
-msgstr "B<cd /cdrom/hamm/hamm/binary/editors> B< dpkg -i vim_4.5-3.deb>"
+msgstr ""
+"    B<cd /cdrom/hamm/hamm/binary/editors>\n"
+"    B< dpkg -i vim_4.5-3.deb>\n"
 
 # type: Plain text
 #: dpkg.1:585
@@ -1690,9 +1695,9 @@ msgstr "Pour faire une copie locale des états de sélection des paquets :"
 
 # type: Plain text
 #: dpkg.1:587
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "     B<dpkg --get-selections E<gt>myselections>\n"
-msgstr "B<dpkg --get-selections E<gt>myselections>"
+msgstr "    B<dpkg --get-selections E<gt>myselections>\n"
 
 # type: Plain text
 #: dpkg.1:591
@@ -1704,11 +1709,13 @@ msgstr ""
 
 # type: Plain text
 #: dpkg.1:594
-#, fuzzy, no-wrap
+#, no-wrap
 msgid ""
 "     B<dpkg --clear-selections>\n"
 "     B<dpkg --set-selections E<lt>myselections>\n"
-msgstr "B<dpkg --set-selections E<lt>myselections>"
+msgstr ""
+"    B<dpkg --clear-selections>\n"
+"    B<dpkg --set-selections E<lt>myselections>\n"
 
 # type: Plain text
 #: dpkg.1:600
@@ -1755,13 +1762,12 @@ msgstr "VOIR AUSSI"
 
 # type: Plain text
 #: dpkg.1:618
-#, fuzzy
 msgid ""
 "B<dselect>(1), B<dpkg-deb>(1), B<dpkg-query>(1), B<deb>(5), B<deb-control>"
 "(5), B<dpkg.cfg>(5), and B<dpkg-reconfigure>(8)."
 msgstr ""
-"B<dselect>(1), B<dpkg-deb>(1), B<deb>(5), B<deb-control>(5), B<dpkg.cfg>(5) "
-"et B<dpkg-reconfigure>(8)"
+"B<dselect>(1), B<dpkg-deb>(1), B<dpkg-query>(1), B<deb>(5), B<deb-control>"
+"(5), B<dpkg.cfg>(5) et B<dpkg-reconfigure>(8)"
 
 # type: SH
 #: dpkg.1:619
