Updated Swedish translation.

--- a/debian/changelog
+++ b/debian/changelog
@@ -39,6 +39,7 @@ dpkg (1.13.20~) UNRELEASED; urgency=low
   * Russian (Yuri Kozlov). Closes: #366353
   * Czech (Miroslav Kure).
   * Simplified Chinese (Kov Tchai). Closes: #366985
+  * Swedish (Peter Karlsson).
 
   [ Updated dselect Translations ]
   * Polish (Robert Luberda).
