--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-05-15  Peter Karlsson  <peterk@debian.org>
+
+	* sv.po: Updated Swedish translation.
+
 2006-05-13  Kov Tchai  <tchaikov@sjtu.edu.cn>
 
 	* zh_CN.po: Updated to 738t4f.
