Changed ChangeLog log.

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,6 +1,6 @@
 2006-05-15  Peter Karlsson  <peterk@debian.org>
 
-	* sv.po: Updated Swedish translation.
+	* sv.po: Updated to 742t.
 
 2006-05-13  Kov Tchai  <tchaikov@sjtu.edu.cn>
 
